feat: create public links from received shares
